--- a/.github/workflows/publish-sb-opentl.yml
+++ b/.github/workflows/publish-sb-opentl.yml
@@ -25,16 +25,16 @@ jobs:
           NUGET_KEY: ${{secrets.NUGET_API_KEY}}
 
       - uses: actions/checkout@v2
-      - name: publish SB.OpenTl.Schema on version change
-        id: publish_nuget_SB_OpentTl_Schema
+      - name: publish SB.OpenTl.ClientApi on version change
+        id: publish_nuget_SB_OpentTl_ClientApi
         uses: rohith/publish-nuget@v2
         with:
           PROJECT_FILE_PATH: src/SB.OpenTl.ClientApi/SB.OpenTl.ClientApi.csproj
           NUGET_KEY: ${{secrets.NUGET_API_KEY}}
       
       - uses: actions/checkout@v2
-      - name: publish SB.OpenTl.Schema on version change
-        id: publish_nuget_SB_OpentTl_Schema
+      - name: publish SB.OpenTl.ClientApi.MtProto on version change
+        id: publish_nuget_SB_OpentTl_ClientApi.MtProto
         uses: rohith/publish-nuget@v2
         with:
           PROJECT_FILE_PATH: src/SB.OpenTl.ClientApi.MtProto/SB.OpenTl.ClientApi.MtProto.csproj
