--- a/.github/workflows/publish-sb-opentl.yml
+++ b/.github/workflows/publish-sb-opentl.yml
@@ -34,7 +34,7 @@ jobs:
       
       - uses: actions/checkout@v2
       - name: publish SB.OpenTl.ClientApi.MtProto on version change
-        id: publish_nuget_SB_OpentTl_ClientApi.MtProto
+        id: publish_nuget_SB_OpentTl_ClientApi_MtProto
         uses: rohith/publish-nuget@v2
         with:
           PROJECT_FILE_PATH: src/SB.OpenTl.ClientApi.MtProto/SB.OpenTl.ClientApi.MtProto.csproj
