--- a/src/SB.OpenTl.ClientApi.MtProto/SB.OpenTl.ClientApi.MtProto.csproj
+++ b/src/SB.OpenTl.ClientApi.MtProto/SB.OpenTl.ClientApi.MtProto.csproj
@@ -18,7 +18,9 @@
     <PackageReference Include="DotNetty.Handlers" Version="0.6.0" />
     <PackageReference Include="log4net" Version="2.0.8" />
     <PackageReference Include="NullGuard.Fody" Version="1.8.5" />
-    <PackageReference Include="OpenTl.Common" Version="1.1.27" />
     <PackageReference Include="OpenTl.Netty.Socks" Version="1.0.2" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SB.OpenTl.Common\SB.OpenTl.Common.csproj" />
   </ItemGroup>
 </Project>
